これで動いてたはず

--- a/app/templates/upload_form.html
+++ b/app/templates/upload_form.html
@@ -1,15 +1,23 @@
 {% extends 'base.html' %}
 
+{% load static %}
 
-{% block contents %}    
-    <form method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {% if form.upload_field %}
-            <p>空ではありません。</p>
-        {% else %}
-            <p>空です</p>
-        {% endif %}
-        {{ form.upload_field }}
-        <input type="submit"></input>
-    </form>
+{% block title %}{% endblock %}
+{% block head %}{% endblock %}
+
+{% block header %}
+<header>
+
+</header>
 {% endblock %}
+
+{% block contents %}
+    {% if widget.value %}
+    <ul>
+        {% for file in widget.value %}
+            <li>{{ file.name }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+    {{ form.document.label }}
+{% endblock%}
