フォーム作成と表示まで完了

--- a/app/templates/upload_form backup_20231004.html
+++ b/app/templates/upload_form backup_20231004.html
@@ -9,6 +9,7 @@
         {% else %}
             <p>空です</p>
         {% endif %}
+        {{ form.upload_file }}
         {{ form.upload_file.label }}
         <input type="submit"></input>
     </form>
