--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,4 @@
-<!-- {% extends 'base.html' %}
+{% extends 'base.html' %}
 
 {% load static %}
 
@@ -12,4 +12,4 @@
 {% endblock %}
 
 {% block contents %}
-{% endblock%} -->
+{% endblock%}
