--- a/myapp/templates/multi_file_input.html
+++ b/myapp/templates/multi_file_input.html
@@ -5,6 +5,16 @@
     {% endfor %}
   </ul>
 {% endif %}
+
+{% if messages %}
+  <ul>
+    {% for message in messages %}
+    <li>{{ message }}</li>
+    {% endfor %}
+  </ul>
+
+{%endif%}
+
 <div>
     <input type="{{ widget.type }}"
            name="{{ widget.name }}"
