--- a/myapp/templates/upload_form.html
+++ b/myapp/templates/upload_form.html
@@ -12,10 +12,20 @@
 {% endblock %}
 
 {% block contents %}
-<form method="post" enctype="multipart/form-data">
+画像アップロードフォーム
+<form action="./" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ testform.document.label }}
     {{ testform.document }}
     <input type="submit" value="アップロード">
 </form>
+
+<form action="{% url 'myapp:facemosaic' %}" method="post">
+    {% csrf_token %}
+    <img src="{{ image1_path }}" style="width:300px; height:200px;"/>
+    <input type="hidden" name="user_id" value="{{ user.id }}">
+    <input type="hidden" name="image_id" value="8">
+    <input type="submit" value="画像加工">
+</form>
+
 {% endblock%}
